--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2367,7 +2367,7 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
-		background-color: #a7999a;
+		background-color: #A8A29C;
 	}
 
 		.image img {
